# arcanum

./: .gitignore  Cargo.toml  README.md  build.sh  objectiveai.json  test.sh
src/: config.rs  context.rs  db.rs  main.rs  monitor.rs  schema.sql
src/commands/: mod.rs
src/commands/mcp/: mod.rs
src/commands/mcp/arcanum/: begin.rs  mod.rs
src/mcp/: common.rs  hello.rs  list_skills.rs  load_skill.rs  mod.rs  run.rs
test-skills/lab-one/farewell/: SKILL.md
test-skills/lab-one/greeting/: SKILL.md
test-skills/lab-two/greeting/: SKILL.md
test-skills/lab-two/nested/deep-skill/: SKILL.md
test-skills/lab-two/summarize/: SKILL.md
tests/: list_skills.rs  load_skill.rs
tests/common/: mod.rs
