[package]
name = "arcanum"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rmcp = { version = "1.8.0", features = ["transport-streamable-http-server"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = "0.8"
futures = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"
objectiveai-sdk = "2.2.8"
dotenv = "0.15.0"
envconfig = "0.11.1"
